k8s/manifest/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: text-to-speech
spec:
  type: NodePort   # 🔥 CHANGE THIS
  selector:
    app: tts
  ports:
    - port: 80
      targetPort: 80
